IntegrationHub/force-app/main/default/objects/Integration_Log__c/fields/Logged_At__c.field-meta.xml
<CustomField>
    <fullName>Logged_At__c</fullName>
    <label>Logged At</label>
    <type>DateTime</type>
    <description>When this integration event actually occurred, stamped by the app itself rather than relying on the system CreatedDate — lets the console correctly distinguish "today" even for backfilled or replayed events.</description>
</CustomField>