IntegrationHub/force-app/main/default/objects/Integration_Log__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>Request Id</label>
    <type>Text</type>
    <length>60</length>
</CustomField>